Refacor : user_dic -> service_dic 보다 적합한 의미의 service_dic.tsv로 이름변경

--- a/chatbot/chatbot.ipynb
+++ b/chatbot/chatbot.ipynb
@@ -108,87 +108,25 @@
    "id": "5ab9d3b19d2e3b33"
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('이번', 'NNG'), ('주말', 'NNP'), ('에', 'JKB'), ('어디', 'NP'), ('가', 'VV'), ('기', 'ETN'), ('로', 'JKB'), ('하', 'VV'), ('았', 'EP'), ('지', 'EC')]\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "komoran = Komoran()\n",
-    "text = \"이번 주말에 어디 가기로 했지\"\n",
-    "pos = komoran.pos(text)\n",
-    "print(pos)"
+    "# 토크나이즈"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T05:09:58.444303500Z",
-     "start_time": "2023-10-22T05:09:54.247962900Z"
-    }
+    "collapsed": false
    },
-   "id": "3cdf320073ff5b75"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/주제별일상대화데이터.csv')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T05:04:03.954684800Z",
-     "start_time": "2023-10-22T05:04:01.814371700Z"
-    }
-   },
-   "id": "7cf884d2950734ca"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                  text\n0                   애덜앙 나 너무 배불러서 배 아파\n1           배 아프면 약국 가서 소화제라도 마시는 거 어때\n2                      얼마나 먹었다고 배가 아프데\n3            떡볶이랑 튀김이랑 닭껍질튀김이랑 마카롱 먹었어\n4  하긴 *이 배는 파리보다 작으니까 당연히 그만큼 먹어도 배부르지",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>애덜앙 나 너무 배불러서 배 아파</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>배 아프면 약국 가서 소화제라도 마시는 거 어때</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>얼마나 먹었다고 배가 아프데</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>떡볶이랑 튀김이랑 닭껍질튀김이랑 마카롱 먹었어</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>하긴 *이 배는 파리보다 작으니까 당연히 그만큼 먹어도 배부르지</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T05:04:03.974064600Z",
-     "start_time": "2023-10-22T05:04:03.957686400Z"
-    }
-   },
-   "id": "7e79a25f9588dd8b"
+   "id": "7f789de2c7405b41"
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "outputs": [],
    "source": [
-    "from konlpy.tag import Komoran\n",
-    "import pickle\n",
-    "\n",
     "class Preprocess:\n",
-    "    def __init__(self, userdic=None): # userdic 인자에는 사용자 정의 사전 파일 경로 입력가능\n",
+    "    def __init__(self, servicedic=None): # userdic 인자에는 사용자 정의 사전 파일 경로 입력가능\n",
     "\n",
     "        # 형태소 분석기 초기화\n",
-    "        self.komoran = Komoran(userdic=userdic)\n",
+    "        self.komoran = Komoran(userdic=servicedic)\n",
     "\n",
     "        # 제외할 품사\n",
     "        # 참조 : https://docs.komoran.kr/firststep/postypes.html\n",
@@ -225,31 +163,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T05:14:25.753143400Z",
      "start_time": "2023-10-22T05:14:25.731632900Z"
     }
    },
    "id": "121775e1676e0df2"
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('3차 회식', 'NNP')]\n",
-      "['3차 회식']\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "\n",
-    "sent = \"3차 회식\"\n",
+    "## TEST"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bce53fbd483b140a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sent = \"구희영 보고싶어\"\n",
     "\n",
     "# 전처리 객체 생성\n",
-    "p = Preprocess(userdic='./files/user_dic.tsv')\n",
+    "p = Preprocess(userdic='./files/service_dic.tsv')\n",
     "\n",
     "# 형태소 분석기 실행\n",
     "pos = p.pos(sent)\n",
@@ -263,13 +200,19 @@
     "print(ret)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-22T05:28:10.037053600Z",
-     "start_time": "2023-10-22T05:28:08.280620800Z"
-    }
+    "collapsed": false
    },
-   "id": "f0f6438935199e91"
+   "id": "6d9391c62d3c04ce"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 단어 임베딩"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fc6aa3d7782df17a"
   },
   {
    "cell_type": "code",
@@ -279,7 +222,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "27b75fd1d1f8ddfd"
+   "id": "603e4b574520d63a"
   }
  ],
  "metadata": {
