Feat : 학습 데이터 생성 데이터 통합 및 통합 데이터에 의도 라벨링 추가
Former-commit-id: 95c6cd6c1c077a114ecec53e1c6a941b2e9e9397 [formerly 9f3ce8a895bdc17dca0e7237c93849cc53ffdabf]
Former-commit-id: dc06aa9b78648c3c739f570efa21b8e1cefd41b3

--- a/chatbot/chatbot.ipynb
+++ b/chatbot/chatbot.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -527,7 +527,8 @@
      "text": [
       "word_dic 로드 성공\n",
       "[('구희영', 'NNP'), ('보', 'VV'), ('싶', 'VX')]\n",
-      "['구희영', '보', '싶']\n"
+      "['구희영', '보', '싶']\n",
+      "[422, 3885, 1042, 1, 16, 11, 70, 7]\n"
      ]
     }
    ],
@@ -546,16 +547,30 @@
     "\n",
     "# 품사 태그 없이 키워드 출력\n",
     "ret = p.get_keywords(pos, without_tag=True)\n",
-    "print(ret)"
+    "print(ret)\n",
+    "\n",
+    "# 단어 임베딩 리스트 출력\n",
+    "embedded_lst = p.get_wordidx_sequence(keywords=sent)\n",
+    "print(embedded_lst)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-22T06:59:28.012598100Z",
-     "start_time": "2023-10-22T06:59:26.756595200Z"
+     "end_time": "2023-10-22T07:39:35.551154200Z",
+     "start_time": "2023-10-22T07:39:32.936644800Z"
     }
    },
    "id": "8f8527c36a7660be"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 의도 분류 모델"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4922f8b0c4cafbc1"
   },
   {
    "cell_type": "code",
@@ -565,7 +580,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "3ca780be5971d0bd"
+   "id": "f112c329207ab418"
   }
  ],
  "metadata": {
