Feat: 카프카 테스트
kafka3.5.0 서버 통신 성공

Change-Id: Ib6d1a50f1d012bfc34788f5fb7d861109203e5df

Former-commit-id: 7d63888037b1dfa88f5b98fcb790d22a04fa012e

--- a/chatbot/app/model/make_schedule.ipynb
+++ b/chatbot/app/model/make_schedule.ipynb
@@ -3,6 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 103,
+   "id": "34182efb7af00c33",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-10T06:20:27.584799500Z",
+     "start_time": "2023-11-10T06:20:27.569679400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def to_datetime(inp):\n",
@@ -28,19 +36,19 @@
     "    )\n",
     "    \n",
     "    return output.content"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-10T06:20:27.584799500Z",
-     "start_time": "2023-11-10T06:20:27.569679400Z"
-    }
-   },
-   "id": "34182efb7af00c33"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 104,
+   "id": "3ee637d9320ceddf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-10T06:20:29.180484400Z",
+     "start_time": "2023-11-10T06:20:29.162451100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def UserMessage_to_cal(userMessage):\n",
@@ -69,19 +77,19 @@
     "        res['calendar_end_date'] = to_datetime(res['calendar_end_date'])\n",
     "    \n",
     "    return res"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-10T06:20:29.180484400Z",
-     "start_time": "2023-11-10T06:20:29.162451100Z"
-    }
-   },
-   "id": "3ee637d9320ceddf"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 105,
+   "id": "e9b0fdc302790c7b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-10T06:21:10.909887Z",
+     "start_time": "2023-11-10T06:21:04.196962Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -94,15 +102,7 @@
    "source": [
     "print(UserMessage_to_cal(\"다음 주 수요일에 해운대에서 생일파티야\"))\n",
     "from datetime import datetime"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-10T06:21:10.909887Z",
-     "start_time": "2023-11-10T06:21:04.196962Z"
-    }
-   },
-   "id": "e9b0fdc302790c7b"
+   ]
   }
  ],
  "metadata": {
