Feat: 일정 조회 API, to_datetime 모듈 활용
2초 ~ 14초 소요

Change-Id: I82d1dddd85b3d31b27dc566fcf0ad6e0459ee50b

Former-commit-id: 30cbf789de4d3bb4368c54326f3c8883b863b27a

--- a/chatbot/app/model/find_schedule.ipynb
+++ b/chatbot/app/model/find_schedule.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# csv Agent로 자동으로 일정 찾기"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fc19a0752e32fb4c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-11-14T03:16:50.535131700Z",
-     "start_time": "2023-11-14T03:16:46.659150500Z"
-    }
-   },
    "outputs": [],
    "source": [
     "from langchain.llms import OpenAI\n",
@@ -18,7 +20,14 @@
     "from langchain.agents.agent_types import AgentType\n",
     "import pandas as pd\n",
     "from langchain_experimental.agents.agent_toolkits import create_csv_agent"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-14T03:16:46.659150500Z"
+    }
+   },
+   "id": "initial_id"
   },
   {
    "cell_type": "code",
@@ -139,6 +148,137 @@
     }
    },
    "id": "a9ee15100640ed6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 날짜만 변환해서 직접 찾기"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ff9eafb702a897fa"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import create_extraction_chain\n",
+    "from langchain.schema import HumanMessage\n",
+    "\n",
+    "def to_datetime(inp):\n",
+    "    \n",
+    "    chat = ChatOpenAI()\n",
+    "    output = chat(\n",
+    "            [\n",
+    "                HumanMessage(\n",
+    "                    content=f\"\"\"\n",
+    "                        Convert the phrase \"{inp}\" to a date in YYYY-MM-DD format, considering today as the reference.\n",
+    "                        If today's date is 2023-11-14,\n",
+    "                        \n",
+    "                        Input: 오늘 \n",
+    "                        Output: 2023-11-14\n",
+    "                        \n",
+    "                        Input: 이번 주 일요일  \n",
+    "                        Output: 2023-11-19\n",
+    "                        \n",
+    "                        Input: 다움 주 월요일  \n",
+    "                        Output: 2023-11-20\n",
+    "                        \n",
+    "                        Input: 이번 주 \n",
+    "                        Output:2023-11-14, 2023-11-15, 2023-11-16, 2023-11-17, 2023-11-18, 2023-11-19, 2023-11-20\n",
+    "                        \n",
+    "                        Input: 다음 주 \n",
+    "                        Output:2023-11-20, 2023-11-21, 2023-11-22, 2023-11-23, 2023-11-24, 2023-11-25, 2023-11-26\n",
+    "                        \n",
+    "                        Input: {inp}\n",
+    "                        Output:\"\"\"\n",
+    "                                )\n",
+    "            ]\n",
+    "    )\n",
+    "    \n",
+    "    return output.content"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T03:33:55.194089400Z",
+     "start_time": "2023-11-14T03:33:55.183089700Z"
+    }
+   },
+   "id": "a558e40e7782fd68"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "date_res = to_datetime('토요일 일정 알려줘')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T03:35:20.408980600Z",
+     "start_time": "2023-11-14T03:35:06.307131100Z"
+    }
+   },
+   "id": "427d98d700da8def"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "date_list = date_res.split(', ')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T03:35:33.013861Z",
+     "start_time": "2023-11-14T03:35:33.006867Z"
+    }
+   },
+   "id": "dfef64913e71d7f6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId calendar_title calendar_place calendar_start_date calendar_end_date\n",
+      "0       1          3주 회식             서면          2023-11-18        2023-11-18\n",
+      "1       1          3주 회식             서면          2023-11-18        2023-11-18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# CSV 파일 경로\n",
+    "csv_file_path = \"../data/cal_1.csv\"\n",
+    "\n",
+    "# CSV 파일을 DataFrame으로 읽기\n",
+    "df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "# cal_start_date가 target_dates에 있는 행만 추출\n",
+    "filtered_df = df[df['calendar_start_date'].isin(date_list)]\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(filtered_df)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T03:35:48.060484600Z",
+     "start_time": "2023-11-14T03:35:48.046493400Z"
+    }
+   },
+   "id": "de13075b0509e5d5"
   }
  ],
  "metadata": {
